<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="obj" type="com.actia.myapplication.data.domain.model.Item"/>
    </data>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="6dp"
        app:cardPreventCornerOverlap="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctlPanelItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imgPoster"
                android:text="@{obj.title}"
                tools:text="Títle"
                android:textSize="15sp"
                android:textAlignment="textStart"/>

            <TextView
                android:id="@+id/txtReleaseYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle"
                app:layout_constraintEnd_toStartOf="@+id/imgPoster"
                android:text="@{obj.releaseYear}"
                tools:text="Release Year"
                android:textSize="12sp"
                android:textAlignment="textStart"/>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgPoster"
                android:layout_width="@dimen/width_item_image"
                android:layout_height="@dimen/height_item_image"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars"

                app:imageUrl = "@{obj.poster}"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>