...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:autofillHints="name"
            android:hint="@string/hint_edittext_title"
            android:inputType="text"
            app:layout_constraintEnd_toStartOf="@+id/btnBuscar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBuscar"
...

            app:layout_constraintTop_toBottomOf="@+id/spinYears"
            android:paddingTop="10dp"/>


        <com.actia.myapplication.controls.RecyclerViewEmptySupport
            android:id="@+id/rvItems"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:listData="@{mainViewModel.getItemsLiveData}"
...
