...
    <string name="lbl_duration">Duration:</string>
    <string name="lbl_score">Score:</string>
    <string name="lbl_title">Title:</string>
    <string name="hint_edittext_title">Introduzca un título</string>
    <string name="waiting_response">Esperando Respuesta</string>
    <string name="title_mandatory">El título es obligatorio</string>
    <string name="btn_search_caption">Buscar</string>
    <string name="error_on_request">"Se produjo un error en la petición. Inténtelo de nuevo"</string>
</resources>
